// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`migrationTemplate() should returns created migration 1`] = `
"<?php

use Illuminate\\\\Support\\\\Facades\\\\Schema;
use Illuminate\\\\Database\\\\Schema\\\\Blueprint;
use Illuminate\\\\Database\\\\Migrations\\\\Migration;

class CreateUsersTable extends Migration
{
    /**
     * Run the migrations.
     *
     * @return void
     */
    public function up()
    {
        Schema::create('users', function (Blueprint $table) {
            $table->increments('id');
            $table->string('fullname');
            $table->string('username');
            $table->rememberToken();
            $table->softDeletes();
            $table->timestamps();
        });
    }

    /**
     * Reverse the migrations.
     *
     * @return void
     */
    public function down()
    {
        Schema::dropIfExists('users');
    }
}"
`;

exports[`migrationTemplate() should returns created migration which has relation 1`] = `
"<?php

use Illuminate\\\\Support\\\\Facades\\\\Schema;
use Illuminate\\\\Database\\\\Schema\\\\Blueprint;
use Illuminate\\\\Database\\\\Migrations\\\\Migration;

class CreatePostsTable extends Migration
{
    /**
     * Run the migrations.
     *
     * @return void
     */
    public function up()
    {
        Schema::create('posts', function (Blueprint $table) {
            $table->increments('id');
            $table->integer('user_id')->unsigned();
            $table->foreign('user_id')->references('id')->on('users');
            $table->string('username');
            $table->rememberToken();
            $table->softDeletes();
            $table->timestamps();
        });
    }

    /**
     * Reverse the migrations.
     *
     * @return void
     */
    public function down()
    {
        Schema::dropIfExists('posts');
    }
}"
`;

exports[`migrationTemplate() should returns created migration with multiple words table 1`] = `
"<?php

use Illuminate\\\\Support\\\\Facades\\\\Schema;
use Illuminate\\\\Database\\\\Schema\\\\Blueprint;
use Illuminate\\\\Database\\\\Migrations\\\\Migration;

class CreateUserOrderNotesTable extends Migration
{
    /**
     * Run the migrations.
     *
     * @return void
     */
    public function up()
    {
        Schema::create('user_order_notes', function (Blueprint $table) {
            $table->increments('id');
            $table->string('fullname');
            $table->string('username');
            $table->rememberToken();
            $table->softDeletes();
            $table->timestamps();
        });
    }

    /**
     * Reverse the migrations.
     *
     * @return void
     */
    public function down()
    {
        Schema::dropIfExists('user_order_notes');
    }
}"
`;
